force-app/main/default/objects/KDCE_Inventory_Status__c/KDCE_Inventory_Status__c.object-meta.xml
<CustomObject>
    <description>판토스, 오프라인스토어 재고현황</description>
    <label>Inventory Status</label>
    <nameField>
        <label>Inventory Status Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Inventory Status List</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>