force-app/main/default/objects/KDCE_Inventory_Status__c/fields/B2BNormal__c.field-meta.xml
<CustomField>
    <fullName>B2BNormal__c</fullName>
    <label>B2BNormal</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>