force-app/main/default/objects/KDCE_Inventory_Status__c/fields/B2CforReplace__c.field-meta.xml
<CustomField>
    <fullName>B2CforReplace__c</fullName>
    <label>B2CforReplace</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>