force-app/main/default/objects/KDCE_Inventory_Status__c/fields/BUCHEON_HYUNDAI__c.field-meta.xml
<CustomField>
    <fullName>BUCHEON_HYUNDAI__c</fullName>
    <label>부천중동</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>