force-app/main/default/objects/KDCE_Inventory_Status__c/fields/BUSAN__c.field-meta.xml
<CustomField>
    <fullName>BUSAN__c</fullName>
    <label>부산센터</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>