force-app/main/default/objects/KDCE_Inventory_Status__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>상품분류</description>
    <label>Category</label>
    <length>20</length>
    <type>Text</type>
</CustomField>