force-app/main/default/objects/KDCE_Inventory_Status__c/fields/DAEJEON__c.field-meta.xml
<CustomField>
    <fullName>DAEJEON__c</fullName>
    <label>대전부티끄</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>