force-app/main/default/objects/KDCE_Inventory_Status__c/fields/EANCode__c.field-meta.xml
<CustomField>
    <fullName>EANCode__c</fullName>
    <label>EANCode</label>
    <length>30</length>
    <type>Text</type>
</CustomField>