force-app/main/default/objects/KDCE_Inventory_Status__c/fields/EL_HANAM__c.field-meta.xml
<CustomField>
    <fullName>EL_HANAM__c</fullName>
    <label>SIS 하남스타필드</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>