force-app/main/default/objects/KDCE_Inventory_Status__c/fields/EL_INCHEON__c.field-meta.xml
<CustomField>
    <fullName>EL_INCHEON__c</fullName>
    <label>SIS 인천연수</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>