force-app/main/default/objects/KDCE_Inventory_Status__c/fields/EL_JEONJU__c.field-meta.xml
<CustomField>
    <fullName>EL_JEONJU__c</fullName>
    <label>SIS 전주</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>