force-app/main/default/objects/KDCE_Inventory_Status__c/fields/EL_JUKJEON__c.field-meta.xml
<CustomField>
    <fullName>EL_JUKJEON__c</fullName>
    <label>SIS 죽전</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>