force-app/main/default/objects/KDCE_Inventory_Status__c/fields/EL_KINTEX__c.field-meta.xml
<CustomField>
    <fullName>EL_KINTEX__c</fullName>
    <label>SIS 킨텍스</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>