force-app/main/default/objects/KDCE_Inventory_Status__c/fields/EL_KWANGJU__c.field-meta.xml
<CustomField>
    <fullName>EL_KWANGJU__c</fullName>
    <label>SIS 광주상무2</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>