force-app/main/default/objects/KDCE_Inventory_Status__c/fields/EL_SUWON__c.field-meta.xml
<CustomField>
    <fullName>EL_SUWON__c</fullName>
    <label>SIS 수원</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>