force-app/main/default/objects/KDCE_Inventory_Status__c/fields/EL_ULSAN__c.field-meta.xml
<CustomField>
    <fullName>EL_ULSAN__c</fullName>
    <label>SIS 울산</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>