force-app/main/default/objects/KDCE_Inventory_Status__c/fields/EL_WSR_SIS__c.field-meta.xml
<CustomField>
    <fullName>EL_WSR_SIS__c</fullName>
    <label>SIS 왕십리</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>