force-app/main/default/objects/KDCE_Inventory_Status__c/fields/EL_YDP__c.field-meta.xml
<CustomField>
    <fullName>EL_YDP__c</fullName>
    <label>SIS 영등포</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>