force-app/main/default/objects/KDCE_Inventory_Status__c/fields/GAROSUGIL__c.field-meta.xml
<CustomField>
    <fullName>GAROSUGIL__c</fullName>
    <label>가로수 센터</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>