force-app/main/default/objects/KDCE_Inventory_Status__c/fields/GIMPO_HYUNDAI__c.field-meta.xml
<CustomField>
    <fullName>GIMPO_HYUNDAI__c</fullName>
    <label>현대김포</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>