force-app/main/default/objects/KDCE_Inventory_Status__c/fields/GOYANG__c.field-meta.xml
<CustomField>
    <fullName>GOYANG__c</fullName>
    <label>고양 센터</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>