force-app/main/default/objects/KDCE_Inventory_Status__c/fields/GWANGHWAMUN__c.field-meta.xml
<CustomField>
    <fullName>GWANGHWAMUN__c</fullName>
    <label>광화문센터</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>