force-app/main/default/objects/KDCE_Inventory_Status__c/fields/L_DAEGU__c.field-meta.xml
<CustomField>
    <fullName>L_DAEGU__c</fullName>
    <label>롯데대구</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>