force-app/main/default/objects/KDCE_Inventory_Status__c/fields/L_KIMPO__c.field-meta.xml
<CustomField>
    <fullName>L_KIMPO__c</fullName>
    <label>롯데김포</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>