force-app/main/default/objects/KDCE_Inventory_Status__c/fields/NAMYANGJU_HYUNDAI__c.field-meta.xml
<CustomField>
    <fullName>NAMYANGJU_HYUNDAI__c</fullName>
    <label>현대남양주</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>