force-app/main/default/objects/KDCE_Inventory_Status__c/fields/PANGYO__c.field-meta.xml
<CustomField>
    <fullName>PANGYO__c</fullName>
    <label>판교부티끄</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>