force-app/main/default/objects/KDCE_Inventory_Status__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>제품코드</description>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Inventory Status List</relationshipLabel>
    <relationshipName>Inventory_Status_List</relationshipName>
    <type>Lookup</type>
</CustomField>