force-app/main/default/objects/KDCE_Inventory_Status__c/fields/Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Product_Code__c</fullName>
    <description>모델코드</description>
    <label>Product Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>