force-app/main/default/objects/KDCE_Inventory_Status__c/fields/Product_Description__c.field-meta.xml
<CustomField>
    <fullName>Product_Description__c</fullName>
    <description>상품명</description>
    <label>Product Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>