force-app/main/default/objects/KDCE_Inventory_Status__c/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <description>상품유형</description>
    <label>Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HEETS</fullName>
            </value>
            <value>
                <fullName>HOLDER</fullName>
            </value>
            <value>
                <fullName>CHARGER</fullName>
            </value>
            <value>
                <fullName>KIT</fullName>
            </value>
            <value>
                <fullName>Accessory</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>