force-app/main/default/objects/KDCE_Inventory_Status__c/fields/RentalDamaged__c.field-meta.xml
<CustomField>
    <fullName>RentalDamaged__c</fullName>
    <label>RentalDamaged</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>