force-app/main/default/objects/KDCE_Inventory_Status__c/fields/RentalNew__c.field-meta.xml
<CustomField>
    <fullName>RentalNew__c</fullName>
    <label>RentalNew</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>