force-app/main/default/objects/KDCE_Inventory_Status__c/fields/RentalNormal__c.field-meta.xml
<CustomField>
    <fullName>RentalNormal__c</fullName>
    <label>RentalNormal</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>