force-app/main/default/objects/KDCE_Inventory_Status__c/fields/RentalReturn__c.field-meta.xml
<CustomField>
    <fullName>RentalReturn__c</fullName>
    <label>RentalReturn</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>