force-app/main/default/objects/KDCE_Inventory_Status__c/fields/Replaced__c.field-meta.xml
<CustomField>
    <fullName>Replaced__c</fullName>
    <label>Replaced</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>