force-app/main/default/objects/KDCE_Inventory_Status__c/fields/RESERVE10__c.field-meta.xml
<CustomField>
    <fullName>RESERVE10__c</fullName>
    <description>여분필드1</description>
    <label>RESERVE10</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>