force-app/main/default/objects/KDCE_Inventory_Status__c/fields/RESERVE11__c.field-meta.xml
<CustomField>
    <fullName>RESERVE11__c</fullName>
    <description>여분필드2</description>
    <label>RESERVE11</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>