force-app/main/default/objects/KDCE_Inventory_Status__c/fields/RESERVE12__c.field-meta.xml
<CustomField>
    <fullName>RESERVE12__c</fullName>
    <description>여분필드3</description>
    <label>RESERVE12</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>