force-app/main/default/objects/KDCE_Inventory_Status__c/fields/Stock_Date__c.field-meta.xml
<CustomField>
    <fullName>Stock_Date__c</fullName>
    <description>재고 일자</description>
    <label>Stock Date</label>
    <type>Date</type>
</CustomField>