force-app/main/default/objects/KDCE_Inventory_Status__c/fields/Stock_Type__c.field-meta.xml
<CustomField>
    <fullName>Stock_Type__c</fullName>
    <label>Stock Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AllStock</fullName>
            </value>
            <value>
                <fullName>AvailableStock</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>