force-app/main/default/objects/KDCE_Inventory_Status__c/fields/TradeinReturn__c.field-meta.xml
<CustomField>
    <fullName>TradeinReturn__c</fullName>
    <label>TradeinReturn</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>