force-app/main/default/objects/KDCE_Inventory_Status__c/fields/Version__c.field-meta.xml
<CustomField>
    <fullName>Version__c</fullName>
    <description>상품 버전</description>
    <label>Version</label>
    <length>30</length>
    <type>Text</type>
</CustomField>