force-app/main/default/objects/KDCE_Inventory_Status__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Stock_Type__c</columns>
    <columns>NAME</columns>
    <columns>Stock_Date__c</columns>
    <columns>Product__c</columns>
    <columns>Product_Code__c</columns>
    <columns>Product_Description__c</columns>
    <columns>B2BNormal__c</columns>
    <columns>B2CNormal__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>